--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>ePortfolio</title>
+    <title>hanane</title>
     <style>
         body {
             font-family: Arial, sans-serif;
@@ -13,7 +13,7 @@
         }
 
         header {
-            background-color: #333;
+            background-color: #fff;
             color: #fff;
             text-align: center;
             padding: 1em;
@@ -27,8 +27,12 @@
             box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
         }
 
-        h1, h2, h3 {
-            color: #333;
+        h2, h3 {
+            color:#333;
+        }
+
+        h1  {
+            color: #fff;
         }
 
         .project {
@@ -49,20 +53,22 @@
 <body>
 
     <header>
-        <img src="your-photo.jpg" alt="Your Name's Photo">
-        <h1>AKO ABUBAKR JAAFAR</h1>
-        <p>Lecturer</p>
+        <a href="poster.jpg" download="poster">
+        <img src="poster.jpg" alt="Your Name's Photo">
+    </a>
+        <h1>hanane</h1>
+        <p>student</p>
     </header>
 
     <section>
         <h2>About Me</h2>
-        <p>Lecturer at Qaiwan International University</p>
+        <p>student at Qaiwan International University</p>
     </section>
 
 
     <section>
         <h2>Contact</h2>
-        <p>Email: ako.abubakr@uniq.edu.iq</p>
+        <p>Email: hmqiu230005@uniq.edu.iq</p>
         <p>LinkedIn: linkedin.com/yourprofile</p>
       
     </section>
