--- a/index.html
+++ b/index.html
@@ -39,11 +39,11 @@
       list-style-type: none; /* Remove default list style */
       margin-top: 1rem; /* Add margin to top */
       padding: 0; /* Reset padding */
-      display: inline-block; /* Center the nav */
+      display: flex; /* Use flexbox for better alignment */
+      justify-content: center; /* Center align items */
     }
 
     nav ul li {
-      display: inline; /* Display items inline */
       margin-right: 1rem; /* Margin between items */
     }
 
@@ -73,6 +73,7 @@
     .profile-img, iframe {
       display: block; /* Display as block element */
       margin: 0 auto; /* Center horizontally */
+      max-width: 100%; /* Ensure images and videos don't exceed container width */
     }
 
     .profile-img {
@@ -82,15 +83,16 @@
       object-fit: cover; /* Cover the entire area */
     }
 
-    iframe {
-      /* Adjust width and height as needed, keeping margin:auto for centering */
-      width: 560px; /* Example width */
-      height: 315px; /* Example height */
-    }
-
     /* Smaller font size for the subtitle */
     .subtitle {
       font-size: 0.8em; /* Adjust the font size as needed */
+    }
+
+    /* Make the PDF links responsive */
+    .pdf-link {
+      display: block;
+      margin: 0 auto 1rem;
+      max-width: 80%; /* Limit maximum width for smaller screens */
     }
   </style>
 </head>
@@ -126,14 +128,14 @@
       <a href="https://freeimage.host/i/JjwGEuI"><img src="https://iili.io/JjwGEuI.md.jpg" alt="Project 1 poster" border="0"></a>
       <p>Project 2: Korek Company Visit</p>
       <!-- Embedding YouTube video for Project 2 -->
-      <iframe width="560" height="315" src="https://www.youtube.com/embed/HhOeckc0XAk" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
-      <p>Project 3: Miss Tara's Report:</p>
+      <iframe width="100%" height="315" src="https://www.youtube.com/embed/HhOeckc0XAk" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+      <p>Project 3: Ms Tara's Report:</p>
       <!-- Button to open PDF link -->
-      <a href="https://files.fm/u/mvwvjnqsg3" target="_blank" style="background-color: #e601ff; color: white; padding: 10px 20px; text-align: center; text-decoration: none; display: inline-block; margin: 4px 2px; cursor: pointer; border-radius: 12px;">Click here for PDF</a>
+      <a href="https://files.fm/u/mvwvjnqsg3" target="_blank" class="pdf-link" style="background-color: #e601ff; color: white; padding: 10px 20px; text-align: center; text-decoration: none; border-radius: 12px;">Click here for PDF</a>
 <p>Project 4: Korek's Report:</p>
-<a href="https://files.fm/u/w73n6gpe8m" target="_blank" style="background-color: #e601ff; color: white; padding: 10px 20px; text-align: center; text-decoration: none; display: inline-block; margin: 4px 2px; cursor: pointer; border-radius: 12px;">Click here for PDF</a>
+<a href="https://files.fm/u/w73n6gpe8m" target="_blank" class="pdf-link" style="background-color: #e601ff; color: white; padding: 10px 20px; text-align: center; text-decoration: none; border-radius: 12px;">Click here for PDF</a>
 <p>Project 5: Design Thinking:</p>
-<a href="https://files.fm/u/k2behpxe76" target="_blank" style="background-color: #e601ff; color: white; padding: 10px 20px; text-align: center; text-decoration: none; display: inline-block; margin: 4px 2px; cursor: pointer; border-radius: 12px;">Click here for PDF</a>
+<a href="https://files.fm/u/k2behpxe76" target="_blank" class="pdf-link" style="background-color: #e601ff; color: white; padding: 10px 20px; text-align: center; text-decoration: none; border-radius: 12px;">Click here for PDF</a>
     </section>
 
     <!-- Contact section -->
